// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Newspaper checkGrammar 1`] = `
<Section
  checkGrammar={true}
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper checkGrammar 2`] = `
<Section
  checkGrammar={false}
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper checkGrammar 3`] = `
<Section
  checkGrammar={false}
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper checkGrammar 4`] = `
<Section
  checkGrammar={true}
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper checkHighlight 1`] = `
<Section
  checkHighlight={true}
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper checkHighlight 2`] = `
<Section
  checkHighlight={false}
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper checkHighlight 3`] = `
<Section
  checkHighlight={false}
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper checkHighlight 4`] = `
<Section
  checkHighlight={true}
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper checkSpaces 1`] = `
<Section
  checkSpaces={true}
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper checkSpaces 2`] = `
<Section
  checkSpaces={false}
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper checkSpaces 3`] = `
<Section
  checkSpaces={false}
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper checkSpaces 4`] = `
<Section
  checkSpaces={true}
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper className 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text my-classname uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 1`] = `
<Section
  className="color-schema-default uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 2`] = `
<Section
  className="color-schema-red uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 3`] = `
<Section
  className="color-schema-red uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 4`] = `
<Section
  className="color-schema-red-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 5`] = `
<Section
  className="color-schema-red-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 6`] = `
<Section
  className="color-schema-green uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 7`] = `
<Section
  className="color-schema-green uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 8`] = `
<Section
  className="color-schema-green-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 9`] = `
<Section
  className="color-schema-green-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 10`] = `
<Section
  className="color-schema-yellow uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 11`] = `
<Section
  className="color-schema-yellow uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 12`] = `
<Section
  className="color-schema-yellow-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 13`] = `
<Section
  className="color-schema-yellow-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 14`] = `
<Section
  className="color-schema-purple uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 15`] = `
<Section
  className="color-schema-purple uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 16`] = `
<Section
  className="color-schema-purple-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 17`] = `
<Section
  className="color-schema-purple-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 18`] = `
<Section
  className="color-schema-brown uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 19`] = `
<Section
  className="color-schema-brown uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 20`] = `
<Section
  className="color-schema-brown-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 21`] = `
<Section
  className="color-schema-brown-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 22`] = `
<Section
  className="color-schema-orange uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 23`] = `
<Section
  className="color-schema-orange uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 24`] = `
<Section
  className="color-schema-orange-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 25`] = `
<Section
  className="color-schema-orange-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 26`] = `
<Section
  className="color-schema-cyan uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 27`] = `
<Section
  className="color-schema-cyan uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 28`] = `
<Section
  className="color-schema-cyan-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 29`] = `
<Section
  className="color-schema-cyan-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 30`] = `
<Section
  className="color-schema-grey uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 31`] = `
<Section
  className="color-schema-grey uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 32`] = `
<Section
  className="color-schema-grey-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 33`] = `
<Section
  className="color-schema-grey-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 34`] = `
<Section
  className="color-schema-pink uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 35`] = `
<Section
  className="color-schema-pink uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 36`] = `
<Section
  className="color-schema-pink-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 37`] = `
<Section
  className="color-schema-pink-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper colorSchema 38`] = `
<Section
  className="color-schema-pink uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper columnsCount 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-1"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper columnsCount 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper columnsCount 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper columnsCount 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-3"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper columnsCount 5`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-3"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper columnsCount 6`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-4"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper columnsCount 7`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-4"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper columnsCount 8`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-5"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper columnsCount 9`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-5"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper columnsCount 10`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-6"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper columnsCount 11`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-6"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper columnsCount 12`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-5"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper content 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={12345}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper content 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content="This is Content from ContentMixin"
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper content 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content="This is Content from ContentMixin"
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper content 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={12345}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper controlled 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper controlled 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper controlled 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper controlled 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper default props 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper disabled 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper disabled 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper disabled 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper disabled 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper docKit examples UU5.Bricks.Newspaper should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="iiROOT"
  style={Object {}}
  title={null}
>
  <Newspaper
    className={null}
    colorSchema={null}
    columnsCount={3}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id="uuID"
    ignoreInnerHTML={false}
    key="uuID"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas libero. Aliquam erat volutpat. Duis condimentum augue id magna semper rutrum. Nam quis nulla. Etiam commodo dui eget wisi. Fusce suscipit libero eget elit. Etiam bibendum elit eget erat. Vestibulum erat nulla, ullamcorper nec,rutrum non, nonummy ac, erat. Etiam neque. Vivamus luctus egestas leo. Integer in sapien. Nullam sapien sem, ornare ac, nonummy non, lobortis a enim. Donec quis nibh at felis congue commodo. Pellentesque arcu. In enim a arcu imperdiet malesuada. Duis bibendum, lectus ut viverra rhoncus, dolor nunc faucibus libero, eget facilisis enim ipsum id lacus. Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? Maecenas fermentum, sem in pharetra pellentesque, velit turpis volutpat ante, in pharetra metus odio a lectus. Duis sapien nunc, commodo et, interdum suscipit, sollicitudin et, dolor. Fusce aliquam vestibulum ipsum. Duis ante orci, molestie vitae vehicula venenatis, tincidunt ac pede. Aenean id metus id velit ullamcorper pulvinar.
  </Newspaper>
</div>
`;

exports[`UU5.Bricks.Newspaper dynamic 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={true}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper dynamic 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper dynamic 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper dynamic 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={true}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper footer 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={
    <div>
      Footer of section
    </div>
  }
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper header 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={
    <div>
      Header of section
    </div>
  }
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper hidden 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper hidden 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper hidden 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper hidden 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper id 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="myId-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper ignoreHTML 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper ignoreHTML 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper ignoreHTML 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper ignoreHTML 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={0}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={2}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 5`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={2}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 6`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={3}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 7`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={3}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 8`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={4}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 9`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={4}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 10`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={5}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 11`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={5}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 12`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={6}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 13`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={6}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 14`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="0"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 15`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="0"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 16`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="1"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 17`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="1"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 18`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="2"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 19`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="2"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 20`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="3"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 21`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="3"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 22`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="4"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 23`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="4"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 24`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="5"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 25`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="5"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 26`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="6"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 27`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="6"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper level 28`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="5"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper mainAttrs 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper name 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="spa"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 5`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 6`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 7`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 8`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 9`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 10`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 11`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 12`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 13`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 14`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel 15`] = `""`;

exports[`UU5.Bricks.Newspaper nestingLevel 16`] = `""`;

exports[`UU5.Bricks.Newspaper nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Newspaper nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Newspaper nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Newspaper nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Newspaper noIndex 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-noindex uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper noIndex 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper noIndex 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper noIndex 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-noindex uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper pureRender 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper pureRender 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper pureRender 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper pureRender 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper selected 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper selected 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper selected 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper selected 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper style 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper style 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper style 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper style 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper textCorrector 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  textCorrector={true}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper textCorrector 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  textCorrector={false}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper textCorrector 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  textCorrector={false}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper textCorrector 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  textCorrector={true}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper tooltip 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip="My Tooltip"
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper underline 1`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper underline 2`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper underline 3`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Newspaper underline 4`] = `
<Section
  className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;
